// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Time Invalid value 1`] = `
.c0 {
  color: #282823;
}

<span
  className="c0"
>
  -
</span>
`;

exports[`Storyshots Atoms / Time Time  1`] = `
.c0 {
  color: #282823;
}

<span
  className="c0"
>
  <time>
    23:53:44
  </time>
</span>
`;

exports[`Storyshots Atoms / Time Uses custom symbol for invalid value 1`] = `
.c0 {
  color: #282823;
}

<span
  className="c0"
>
  X
</span>
`;
